--- a/app/src/main/res/layout/list_item_map.xml
+++ b/app/src/main/res/layout/list_item_map.xml
@@ -11,7 +11,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:background="@color/colorAccent"
+            android:background="@android:color/background_light"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="@{clickListener}"
