--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,10 @@
         android:fitsSystemWindows="true"
         tools:openDrawer="start">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <FrameLayout
             android:layout_width="match_parent"
-            android:id="@+id/appBarLayout"
             android:layout_height="match_parent"
+
             tools:context=".MainActivity">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,12 +20,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                tools:showIn="@id/appBarLayout"
                 tools:context=".MainActivity">
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.appbar.AppBarLayout
+                app:elevation="0dp"
+                android:id="@+id/appbar"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:theme="@style/AppTheme.AppBarOverlay">
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+            <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    app:titleTextAppearance="@android:color/transparent"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+    </FrameLayout>
 
     <com.google.android.material.navigation.NavigationView
             android:id="@+id/nav_view"
