--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
     <style name="AppTheme" parent="BaseAppTheme"/>
 
     <style name="AppTheme.NoActionBar">
+        <item name="colorPrimary">@android:color/transparent</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
