--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -18,7 +18,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-
+        <variable
+                name="login"
+                type="android.view.View.OnClickListener"/>
         <variable
                 name="model"
                 type="com.tsystems.r2b.dflow.screens.login.LoginViewModel" />
@@ -51,7 +53,7 @@
                 android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
         <Button
                 android:text="Login"
-                android:onClick="@{(view) -> model.login()}"
+                android:onClick="@{login}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/button" android:layout_marginTop="8dp"
