--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/nav_graph" app:startDestination="@id/mapFragment">
+            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph" app:startDestination="@id/mapFragment">
 
     <fragment android:id="@+id/mapFragment" android:name="com.tsystems.r2b.dflow.screens.map.MapFragment"
               android:label="MapFragment">
+        <action android:id="@+id/action_book_vehicle"
+                app:destination="@id/vehicleBookingFragment" app:popUpTo="@+id/mapFragment"
+        />
     </fragment>
     <fragment android:id="@+id/loginFragment" android:name="com.tsystems.r2b.dflow.screens.login.LoginFragment"
               android:label="LoginFragment">
     </fragment>
+    <fragment android:id="@+id/vehicleBookingFragment" android:name="com.tsystems.r2b.dflow.screens.bookVehicle.VehicleBookingFragment"
+              android:label="fragment_vehicle_booking" tools:layout="@layout/fragment_vehicle_booking"/>
 </navigation>
