--- a/app/src/main/res/layout/list_item_map.xml
+++ b/app/src/main/res/layout/list_item_map.xml
@@ -21,43 +21,44 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:background="@color/colorPrimary"
                 android:id="@+id/location_item_header"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
             <ImageView
                     android:transitionName="@string/bookTransitionName"
                     android:id="@+id/location_item_image"
+                    android:layout_marginTop="@dimen/margin_normal"
                     android:scaleType="centerInside"
                     android:layout_width="wrap_content"
                     android:adjustViewBounds="true"
                     android:layout_height="@dimen/map_location_item_image_height"
-                    android:layout_marginTop="@dimen/margin_normal"
-                    android:layout_marginBottom="@dimen/margin_normal"
                     android:contentDescription="@{@string/map_location_image(location.name)}"
                     app:imageFromUrl="@{location.imageUrl}"
-                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp"/>
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_normal"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
             <Button android:text="Book"
-                    android:layout_gravity="center"
+                    android:id="@+id/book_button"
                     android:onClick="@{bookVehicleListener}"
                     android:layout_width="0dp"
-                    android:layout_marginLeft="@dimen/margin_normal"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:layout_marginRight="@dimen/margin_normal"
-                    android:layout_height="wrap_content" android:id="@+id/book_button"
-                    android:layout_weight="1"/>
-        </LinearLayout>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
                 android:id="@+id/location_item_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_normal"
                 android:layout_marginEnd="@dimen/margin_small"
                 android:layout_marginStart="@dimen/margin_small"
-                android:layout_marginTop="@dimen/margin_small"
                 android:text="@{location.name}"
                 android:textAppearance="?attr/textAppearanceListItem"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -76,19 +77,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/location_item_title"
                 app:layout_constraintHorizontal_bias="0.0"/>
-        <!--<TextView-->
-        <!--android:id="@+id/location_item_distance"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginEnd="@dimen/margin_small"-->
-        <!--android:layout_marginStart="@dimen/margin_small"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--android:text="@{location.charge}"-->
-        <!--android:textAppearance="?attr/textAppearanceListItem"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/location_item_tariff"-->
-        <!--app:layout_constraintHorizontal_bias="0.0"/>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
