--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -23,7 +23,7 @@
                 type="android.view.View.OnClickListener"/>
         <variable
                 name="model"
-                type="com.tsystems.r2b.dflow.screens.login.LoginViewModel" />
+                type="com.tlabscloud.r2b.dflow.screens.login.LoginViewModel" />
     </data>
 
 
