--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,15 +3,15 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph" app:startDestination="@id/mapFragment">
 
-    <fragment android:id="@+id/mapFragment" android:name="com.tsystems.r2b.dflow.screens.map.MapFragment"
+    <fragment android:id="@+id/mapFragment" android:name="com.tlabscloud.r2b.dflow.screens.searchVehicle.SearchVehicleFragment"
               android:label="MapFragment">
         <action android:id="@+id/action_book_vehicle"
                 app:destination="@id/vehicleBookingFragment" app:popUpTo="@+id/mapFragment"
         />
     </fragment>
-    <fragment android:id="@+id/loginFragment" android:name="com.tsystems.r2b.dflow.screens.login.LoginFragment"
+    <fragment android:id="@+id/loginFragment" android:name="com.tlabscloud.r2b.dflow.screens.login.LoginFragment"
               android:label="LoginFragment">
     </fragment>
-    <fragment android:id="@+id/vehicleBookingFragment" android:name="com.tsystems.r2b.dflow.screens.bookVehicle.VehicleBookingFragment"
+    <fragment android:id="@+id/vehicleBookingFragment" android:name="com.tlabscloud.r2b.dflow.screens.bookVehicle.VehicleBookingFragment"
               android:label="fragment_vehicle_booking" tools:layout="@layout/fragment_vehicle_booking"/>
 </navigation>
