--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -23,42 +23,51 @@
                 type="android.view.View.OnClickListener"/>
         <variable
                 name="model"
-                type="com.tlabscloud.r2b.dflow.screens.login.LoginViewModel" />
+                type="com.tlabscloud.r2b.dflow.screens.login.LoginViewModel"/>
     </data>
 
+    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/login_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="47dp"
-                android:inputType="textEmailAddress"
-                android:ems="10"
-                android:text="@={model.username}"
-                android:id="@+id/editText"
-                android:layout_marginTop="92dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
-        <EditText
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="47dp"
+                    android:inputType="textEmailAddress"
+                    android:ems="10"
+                    android:text="@={model.username}"
+                    android:id="@+id/editText"
+                    android:layout_marginTop="92dp" app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:ems="10"
+                    android:id="@+id/editText2"
+                    android:text="@={model.password}"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText"
+                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
+            <Button
+                    android:text="Login"
+                    android:onClick="@{login}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/button" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <ProgressBar
+                android:id="@+id/progressBar_cyclic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
-                android:id="@+id/editText2"
-                android:text="@={model.password}"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText"
-                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
-        <Button
-                android:text="Login"
-                android:onClick="@{login}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/button" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_gravity="center"/>
+    </FrameLayout>
 </layout>
