--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph" app:startDestination="@id/mapFragment">
+            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph" app:startDestination="@id/loginFragment">
 
-    <fragment android:id="@+id/mapFragment" android:name="com.tlabscloud.r2b.dflow.screens.searchVehicle.SearchVehicleFragment"
-              android:label="MapFragment">
+    <fragment android:id="@+id/searchVehicleFragment" android:name="com.tlabscloud.r2b.dflow.screens.searchVehicle.SearchVehicleFragment"
+              android:label="SearchVehicleFragment">
         <action android:id="@+id/action_book_vehicle"
-                app:destination="@id/vehicleBookingFragment" app:popUpTo="@+id/mapFragment"
+                app:destination="@id/vehicleBookingFragment" app:popUpTo="@+id/searchVehicleFragment"
         />
     </fragment>
     <fragment android:id="@+id/loginFragment" android:name="com.tlabscloud.r2b.dflow.screens.login.LoginFragment"
