--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph" app:startDestination="@id/loginFragment">
+            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph" app:startDestination="@id/searchVehicleFragment">
 
     <fragment android:id="@+id/searchVehicleFragment" android:name="com.tlabscloud.r2b.dflow.screens.searchVehicle.SearchVehicleFragment"
               android:label="SearchVehicleFragment">
@@ -14,4 +14,7 @@
     </fragment>
     <fragment android:id="@+id/vehicleBookingFragment" android:name="com.tlabscloud.r2b.dflow.screens.bookVehicle.VehicleBookingFragment"
               android:label="fragment_vehicle_booking" tools:layout="@layout/fragment_vehicle_booking"/>
+    <fragment android:id="@+id/loadingFragment" android:name="com.tlabscloud.r2b.dflow.screens.loading.LoadingFragment"
+              android:label="fragment_loading" tools:layout="@layout/fragment_loading">
+    </fragment>
 </navigation>
