--- a/app/src/main/res/layout/fragment_vehicle_booking.xml
+++ b/app/src/main/res/layout/fragment_vehicle_booking.xml
@@ -43,7 +43,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/margin_small"
-                        android:text="@{vehicle.tariff}"
+                        app:vehicleTariffText="@{vehicle.tariff}"
                         android:textAppearance="?attr/textAppearanceListItem"/>
             </LinearLayout>
         </LinearLayout>
