--- a/app/src/main/res/layout/fragment_vehicle_booking.xml
+++ b/app/src/main/res/layout/fragment_vehicle_booking.xml
@@ -23,21 +23,95 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/card_image_height"
                     android:scaleType="centerCrop"
-                    android:contentDescription="@{@string/map_location_image(vehicle.name)}"
-            />
+                    android:contentDescription="@{@string/map_location_image(vehicle.name)}"/>
 
             <LinearLayout
                     android:id="@+id/book_vehicle_content"
                     android:orientation="vertical"
-                          android:layout_width="match_parent"
-                          android:layout_height="wrap_content">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                 <TextView
                         android:id="@+id/vehicle_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/margin_small"
                         android:text="@{vehicle.name}"
-                        android:textAppearance="?attr/textAppearanceListItem"/>
+                        tools:text="SAMPLE Name"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+                <TableLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:stretchColumns="*">
+
+                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
+                        <LinearLayout android:orientation="horizontal"
+                                      android:layout_width="wrap_content"
+                                      android:layout_gravity="center"
+                                      android:layout_height="wrap_content">
+                            <ImageView
+                                    android:layout_width="48dp"
+                                    android:layout_height="48dp"
+                                    android:contentDescription="@string/booking_battery"
+                                    android:src="@drawable/battery_charging_full"
+                                    android:tint="@color/colorAccent"/>
+                            <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@{vehicle.chargeLevelFormatted}"
+                                    android:layout_gravity="center"
+                                    tools:text="45%"/>
+                        </LinearLayout>
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@{vehicle.electricRange+` `+@string/km}"
+                                android:layout_gravity="center"
+                                tools:text="400 km"/>
+                        <LinearLayout android:orientation="horizontal"
+                                      android:layout_width="wrap_content"
+                                      android:layout_gravity="center"
+                                      android:layout_height="wrap_content">
+                            <ImageView
+                                    android:layout_width="48dp"
+                                    android:layout_height="48dp"
+                                    android:contentDescription="@string/booking_remaining_distance"
+                                    android:src="@drawable/directions_black"
+                                    android:tint="@color/colorAccent"/>
+                            <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@{vehicle.chargeLevelFormatted}"
+                                    android:layout_gravity="center"
+                                    tools:text="12.5 km"/>
+                        </LinearLayout>
+                    </TableRow>
+                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:singleLine="false"
+                                android:gravity="center_horizontal"
+                                android:layout_gravity="center_horizontal"
+                                android:scrollHorizontally="false"
+                                android:text="@string/booking_battery"/>
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:singleLine="false"
+                                android:gravity="center_horizontal"
+                                android:layout_gravity="center_horizontal"
+                                android:scrollHorizontally="false"
+                                android:text="@string/booking_remaining_distance"/>
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:singleLine="false"
+                                android:gravity="center_horizontal"
+                                android:layout_gravity="center_horizontal"
+                                android:scrollHorizontally="false"
+                                android:text="@string/booking_closest_charger"/>
+                    </TableRow>
+                </TableLayout>
                 <TextView
                         android:id="@+id/vehicle_tariff"
                         android:layout_width="wrap_content"
